--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.6",
+    "@angular/animations": "^5.2.2",
     "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.4.6",
-    "@angular/http": "^4.0.0",
+    "@angular/common": "^5.2.2",
+    "@angular/compiler": "^5.2.2",
+    "@angular/compiler-cli": "^5.2.2",
+    "@angular/core": "^5.2.2",
+    "@angular/forms": "^5.2.2",
+    "@angular/http": "^5.2.2",
     "@angular/material": "^2.0.0-beta.12",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/platform-browser": "^5.2.2",
+    "@angular/platform-browser-dynamic": "^5.2.2",
+    "@angular/platform-server": "^5.2.2",
+    "@angular/router": "^5.2.2",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
