--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@angular/cdk": "^2.0.0-beta.12",
     "@angular/common": "^5.2.2",
     "@angular/compiler": "^5.2.2",
-    "@angular/compiler-cli": "^5.2.2",
     "@angular/core": "^5.2.2",
     "@angular/forms": "^5.2.2",
     "@angular/http": "^5.2.2",
@@ -27,13 +26,15 @@
     "@angular/platform-browser-dynamic": "^5.2.2",
     "@angular/platform-server": "^5.2.2",
     "@angular/router": "^5.2.2",
+    "@ngtools/webpack": "^1.9.7",
     "core-js": "^2.4.1",
+    "latest": "^0.2.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "^4.0.0",
+    "@angular/compiler-cli": "^5.2.3",
     "@storybook/addon-actions": "^3.3.3",
     "@storybook/addon-links": "^3.3.3",
     "@storybook/addon-notes": "^3.3.3",
