--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@angular/animations": "^5.2.2",
     "@angular/cdk": "^2.0.0-beta.12",
+    "@angular/cli": "^1.0.0",
     "@angular/common": "^5.2.2",
     "@angular/compiler": "^5.2.2",
     "@angular/core": "^5.2.2",
