Update to angular 7

--- a/package.json
+++ b/package.json
@@ -12,28 +12,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.2",
-    "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/cli": "^1.0.0",
-    "@angular/common": "^5.2.3",
-    "@angular/compiler": "^5.2.2",
-    "@angular/core": "^5.2.3",
-    "@angular/forms": "^5.2.2",
-    "@angular/http": "^5.2.2",
-    "@angular/material": "^2.0.0-beta.12",
-    "@angular/platform-browser": "^5.2.2",
-    "@angular/platform-browser-dynamic": "^5.2.2",
-    "@angular/platform-server": "^5.2.2",
-    "@angular/router": "^5.2.2",
+    "@angular/animations": "7.2.0",
+    "@angular/cdk": "^7.2.1",
+    "@angular/common": "7.2.0",
+    "@angular/compiler": "7.2.0",
+    "@angular/core": "7.2.0",
+    "@angular/forms": "7.2.0",
+    "@angular/http": "7.2.0",
+    "@angular/material": "^7.2.1",
+    "@angular/platform-browser": "7.2.0",
+    "@angular/platform-browser-dynamic": "7.2.0",
+    "@angular/platform-server": "7.2.0",
+    "@angular/router": "7.2.0",
     "@ngtools/webpack": "^1.9.7",
     "core-js": "^2.4.1",
     "latest": "^0.2.0",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "rxjs": "^6.3.3",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "^5.2.3",
+    "@angular/cli": "7.2.1",
+    "@angular/compiler-cli": "7.2.0",
     "@types/jasmine": "2.5.38",
     "@types/lodash-es": "^4.17.0",
     "@types/node": "~6.0.60",
@@ -49,6 +48,6 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "^2.4.2"
+    "typescript": "3.2.2"
   }
 }
